erDiagram
    %% Entity Definitions
    spacecraft {
        INT spacecraft_id PK "Spacecraft ID (Primary Key)"
        TEXT cospar_id "COSPAR ID"
        TEXT spacecraft_name "Spacecraft Name"
        TEXT launch_date "Launch Date"
        TEXT spacecraft_description "Spacecraft Description"
    }

    thermal_analysis_object {
        INT object_id PK "Object ID (Primary Key)"
        INT spacecraft_id FK "Spacecraft ID (Foreign Key)"
        TEXT analysis_object "Analysis Object Name"
    }

    thermal_analysis_entry {
        INT entry_id PK "Entry ID (Primary Key)"
        INT object_id FK "Object ID (Foreign Key)"
        INT software_set_id FK "Software Set ID (Foreign Key)"
        INT reference_set_id FK "Reference Set ID (Foreign Key)"
        TEXT thermal_description "Thermal Description"
    }

    %% --- Software Related ---
    software_set {
        INT software_set_id PK "Software Set ID (Primary Key)"
    }
    %% software_set: This table solely defines the existence of a set

    software {
        INT software_id PK "Software ID (Primary Key)"
        TEXT software_name "Software Name"
        TEXT software_version "Software Version"
        TEXT developer "Developer"
    }

    software_set_membership {
        INT software_set_id PK, FK "Software Set ID (Part of Composite PK, FK)"
        INT software_id PK, FK "Software ID (Part of Composite PK, FK)"
    }
    %% software_set_membership: This table defines which software belongs to which set

    %% --- Reference Related ---
    reference_set {
        INT reference_set_id PK "Reference Set ID (Primary Key)"
    }
    %% reference_set: This table solely defines the existence of a set

    reference {
        TEXT bibtex_key PK "BibTeX Key (Primary Key)"
        TEXT document_type "Document Type"
        TEXT title "Title"
        TEXT author "Author"
        TEXT journal "Journal"
        TEXT doi "DOI"
        TEXT book_title "Book Title"
        INT publication_year "Publication Year"
    }

    reference_set_membership {
        INT reference_set_id PK, FK "Reference Set ID (Part of Composite PK, FK)"
        TEXT bibtex_key PK, FK "BibTeX Key (Part of Composite PK, FK)"
    }
    %% reference_set_membership: This table defines which reference belongs to which set

    %% Relationship Definitions (Crow's Foot Notation)
    spacecraft ||--o{ thermal_analysis_object : "has"
    thermal_analysis_object ||--o{ thermal_analysis_entry : "analyzed in"
    software_set ||--o{ thermal_analysis_entry : "uses set"
    reference_set ||--o{ thermal_analysis_entry : "uses set"
    software_set ||--|{ software_set_membership : "identifies group for"
    software }o--|| software_set_membership : "is member of"
    reference_set ||--|{ reference_set_membership : "identifies group for" 
    reference }o--|| reference_set_membership : "is member of"